logs/tracking/build.make.612.log.stderr
In file included from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:52:0,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/main.cpp:20:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h: In member function ‘bool pcl::visualization::AreaPickingEvent::getPointsIndices(std::vector<int>&) const’:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h:64:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
           if (nb_points_ == -1)
                              ^
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp: In function ‘int main()’:
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp:63:39: error: expected primary-expression before ‘depth’
     sleep(5);initializeFilter(cv::Mat depth, Eigen::Matrix<float,3,Eigen::Dynamic> pixel_coord);
                                       ^
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp:63:84: error: expected primary-expression before ‘pixel_coord’
     sleep(5);initializeFilter(cv::Mat depth, Eigen::Matrix<float,3,Eigen::Dynamic> pixel_coord);
                                                                                    ^
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp:63:95: error: ‘initializeFilter’ was not declared in this scope
     sleep(5);initializeFilter(cv::Mat depth, Eigen::Matrix<float,3,Eigen::Dynamic> pixel_coord);
                                                                                               ^
In file included from /usr/include/eigen3/Eigen/Core:254:0,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/RGDBSimulator.h:14,
                 from /home/dexheimere/thesis_ws/src/tracking/src/main.cpp:17:
/usr/include/eigen3/Eigen/src/Core/Assign.h: In instantiation of ‘Derived& Eigen::DenseBase<Derived>::lazyAssign(const Eigen::DenseBase<OtherDerived>&) [with OtherDerived = Eigen::Matrix<float, 2, -1>; Derived = Eigen::Matrix<float, 3, -1>]’:
/usr/include/eigen3/Eigen/src/Core/PlainObjectBase.h:411:46:   required from ‘Derived& Eigen::PlainObjectBase<Derived>::lazyAssign(const Eigen::DenseBase<OtherDerived>&) [with OtherDerived = Eigen::Matrix<float, 2, -1>; Derived = Eigen::Matrix<float, 3, -1>]’
/usr/include/eigen3/Eigen/src/Core/Assign.h:520:123:   required from ‘static Derived& Eigen::internal::assign_selector<Derived, OtherDerived, false, false>::run(Derived&, const OtherDerived&) [with Derived = Eigen::Matrix<float, 3, -1>; OtherDerived = Eigen::Matrix<float, 2, -1>]’
/usr/include/eigen3/Eigen/src/Core/PlainObjectBase.h:618:105:   required from ‘Derived& Eigen::PlainObjectBase<Derived>::_set_noalias(const Eigen::DenseBase<OtherDerived>&) [with OtherDerived = Eigen::Matrix<float, 2, -1>; Derived = Eigen::Matrix<float, 3, -1>]’
/usr/include/eigen3/Eigen/src/Core/Matrix.h:281:31:   required from ‘Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>::Matrix(const Eigen::MatrixBase<OtherDerived>&) [with OtherDerived = Eigen::Matrix<float, 2, -1>; _Scalar = float; int _Rows = 3; int _Cols = -1; int _Options = 0; int _MaxRows = 3; int _MaxCols = -1]’
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp:85:67:   required from here
/usr/include/eigen3/Eigen/src/Core/util/StaticAssert.h:32:40: error: static assertion failed: YOU_MIXED_MATRICES_OF_DIFFERENT_SIZES
     #define EIGEN_STATIC_ASSERT(X,MSG) static_assert(X,#MSG);
                                        ^
/usr/include/eigen3/Eigen/src/Core/util/StaticAssert.h:182:3: note: in expansion of macro ‘EIGEN_STATIC_ASSERT’
   EIGEN_STATIC_ASSERT( \
   ^
/usr/include/eigen3/Eigen/src/Core/Assign.h:492:3: note: in expansion of macro ‘EIGEN_STATIC_ASSERT_SAME_MATRIX_SIZE’
   EIGEN_STATIC_ASSERT_SAME_MATRIX_SIZE(Derived,OtherDerived)
   ^
make[2]: *** [CMakeFiles/tracking.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
